--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -60,15 +60,16 @@ header#banner nav ul li a {
 }
 
 @media (max-width: 767px) {
-    header#banner {
-        margin-left: 20px;
-    }
     header#banner nav ul {
         font-size: .95em;
     }
     header#banner nav ul li {
         margin: 0 4px;
     }
+}
+
+main#content {
+    padding: 0 20px;
 }
 
 main#content a {
@@ -346,6 +347,9 @@ main#content .profile-image {
     }
     header#banner h2 {
         font-size: 2.1rem;
+    }
+    main#content {
+        padding: 0 14px;
     }
     .header-inner {
         padding-left: 14px; /* Adjust this value as per your preference */
