🐛 scale image accent in line with image

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -358,6 +358,7 @@ main#content .profile-image {
   
 .image-accent {
     position: relative;
+    height: min-content;
 }
   
 .image-accent::before {
