--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 <article>
     <header id="post-header">
         {{ if eq .RelPermalink "/" }}
-            <h1 style="visibility:hidden;">&nbsp;</h1>
+            <!-- <h1 style="visibility:hidden;">&nbsp;</h1> -->
         {{ end }}
     </header>
     <div class="landing-page-content">
