--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,7 +12,7 @@
         </div>
         <div class="image-content image-accent">
             <div class="image-wrapper">
-                <img src="{{ "img/09_headshot.jpg" | absURL }}" alt="Your Name" class="profile-image">
+                <img src="{{ "img/09_headshot.jpg" | absURL }}" alt="headshot" class="profile-image">
             </div>
         </div>        
     </div>
