--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,24 +35,25 @@ header#banner a:hover {
 header#banner h2 {
     display: inline;
     font-size: 2.5rem;
-    margin: 0 8px 0 0;
+    margin: 0 16px 0 0;
 }
 
 header#banner nav {
     display: inline-block;
+    vertical-align: 5%;
 }
 
 header#banner nav ul {
     list-style-type: none;
     font-size: 1.05em;
-    text-transform: lowercase;
+    /* text-transform: lowercase; */
     margin: 0;
     padding: 0;
 }
 
 header#banner nav ul li {
     display: inline;
-    margin: 0 6px;
+    margin: 0 10px;
 }
 
 header#banner nav ul li a {
