--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,16 +1,28 @@
 <header id="banner">
     <div class="header-content">
         <div class="header-inner">
-            <h2><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h2>
-            <nav>
-                <ul>
-                    {{ range .Site.Menus.main.ByWeight -}}
-                    <li>
-                        {{ .Pre }}<a href="{{ .URL }}" title="{{ .Title }}">{{- .Name -}}</a>{{ .Post }}
-                    </li>
-                    {{- end }}
-                </ul>
-            </nav>
+            <div class="header-left">
+                <h2><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h2>
+                <nav>
+                    <ul>
+                        {{ range .Site.Menus.main.ByWeight -}}
+                        <li>
+                            {{ .Pre }}<a href="{{ .URL }}" title="{{ .Title }}">{{- .Name -}}</a>{{ .Post }}
+                        </li>
+                        {{- end }}
+                    </ul>
+                </nav>
+            </div>
+            <div class="header-right">
+                <div class="social-icons">
+                    <!-- <h2>foo</h2> -->
+                    <ul>
+                        {{ range .Site.Params.social }}
+                            <li>{{ partial "icon.html" . }}</li>
+                        {{ end }}
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 </header>
