align landing image with landing text (top)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -340,6 +340,10 @@ footer#footer {
     display: flex;
     justify-content: center;
 }
+
+.image-offset {
+    margin-top: 0.5rem;
+}
   
 main#content .profile-image {
     width: 100%;
@@ -351,6 +355,9 @@ main#content .profile-image {
 @media (max-width: 767px) {
     .landing-page-content {
         grid-template-columns: 1fr;
+    }
+    .image-offset {
+        margin-top: -2rem;
     }
     .image-content {
         max-width: 180px;
