--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,6 @@ html {
 }
 
 body {
-    font-size: 16px;
     font-size: 1.6rem;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     color: #313a3d;
@@ -20,7 +19,7 @@ body {
 }
 
 header#banner {
-    margin: 40px 0;
+    margin: 40px 0 50px 0;
 }
 
 header#banner a {
@@ -108,7 +107,7 @@ main#content h6 + p {
 
 main#content p {
     color: #394548;
-    margin: 16px 0;
+    margin: 0 0 16px 0;
 }
 
 main#content hr {
@@ -326,7 +325,7 @@ footer#footer {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    padding: 0px 10px 0px 20px;
+    padding: 0px 20px;
 }
   
 .landing-page-content {
@@ -364,6 +363,9 @@ main#content .profile-image {
         margin-left: auto;
         margin-right: auto;
     }
+    header#banner {
+        margin: 20px 0 30px 0;
+    }    
     header#banner h2 {
         font-size: 2.1rem;
     }
@@ -429,13 +431,13 @@ main#content .bottom-image {
 }
 
 .social-icons li {
-    margin-right: 10px; /* Spacing between icons */
+    margin-left: 10px; /* Spacing between icons */
+    font-size: larger;
 }
 
 .social-icon {
     transition: filter 0.3s ease;
 }
-
 
 .social-icon:hover {
     filter: brightness(80%) invert(1)
