--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -156,6 +156,7 @@ main#content header#post-header h1 {
     font-size: 2.3rem;
     font-weight: 600;
     line-height: 1.15;
+    margin-bottom: 16px;
 }
 
 main#content header#post-header > div {
